--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   fl_chart: ^0.68.0
   url_launcher: ^6.2.2 
   file_picker: ^6.1.1 
+  share_plus: ^7.2.1 
+  font_awesome_flutter: ^10.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -27,3 +29,5 @@ flutter:
   # Add assets here
   assets:
     - assets/images/rocket-boy.png
+    - assets/images/google_logo.png.
+    
