--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   fl_chart: ^0.68.0
-  url_launcher: ^6.2.2 
+  url_launcher: ^6.2.2
+  lottie: ^3.1.2 
   share_plus: ^7.2.1 
   font_awesome_flutter: ^10.7.0
 dev_dependencies:
@@ -29,4 +30,4 @@ flutter:
   assets:
     - assets/images/rocket-boy.png
     - assets/images/google_logo.png
-    
+    - assets/images/Animation.json
