--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   lottie: ^3.1.2 
   share_plus: ^7.2.1 
   font_awesome_flutter: ^10.7.0
+  excel: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
